--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
     sdk: flutter
   provider: ^6.0.0
   shimmer: ^2.0.0
-
+  cloud_firestore: ^2.5.3
+  firebase_core: ^1.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
